[package]
name = "ferris-says"
version = "0.2.1"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "A Rust flavored replacement for the classic cowsay"
documentation = "https://docs.rs/ferris-says"
homepage = "https://github.com/mgattozzi/ferris-says"
repository = "https://github.com/mgattozzi/ferris-says"
readme = "README.md"
keywords = ["ferris", "cowsay", "print", "fsays", "rustacean"]
categories = [
  "text-processing",
  "visualization",
  "rendering",
  "command-line-utilities",
  "value-formatting"
]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "ferris_says"
crate-type = ["cdylib", "rlib"]

[features]
clippy = []

[dependencies]
js-sys = "0.3.59"
smallvec = "1.9.0"
textwrap = "0.15"
unicode-width = "0.1.9"
wasm-bindgen = "0.2.82"

[dev-dependencies]
wasm-bindgen-test = "0.3"
paste = "1"

[workspace]
members = ["fsays"]
